fix: content wrapping

--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   align-items: center;
   background-color: var(--background-light);
   color: var(--text-primary);
   scroll-snap-align: start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .heading {
@@ -31,6 +31,4 @@
   justify-content: space-between;
   justify-self: stretch;
   padding-bottom: 4rem;
-  height: 75vh;
-  overflow-y: auto;
 }
